[package]
name = "actionkv"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
crc = "3"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"
